fix: cuit/cuil conceptual

--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -71,7 +71,7 @@
             </ng-container>
 
             <ng-container matColumnDef="cuil">
-              <mat-header-cell *matHeaderCellDef>CUIT/CUIL</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>CUIL</mat-header-cell>
               <mat-cell *matCellDef="let usuario" data-label="Cuil">{{ formatearCuil(usuario.cuil) }}</mat-cell>
             </ng-container>
 
