--- a/src/app/modules/empleados/registrar-empleados/registrar-empleados.component.html
+++ b/src/app/modules/empleados/registrar-empleados/registrar-empleados.component.html
@@ -47,7 +47,7 @@
 
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CUIT/CUIL</mat-label>
+          <mat-label>CUIL</mat-label>
           <input type="text" mask="00-00000000-0" matInput [formControl]="txCuil"/>
         </mat-form-field>
         <app-error-messages [control]="txCuil"></app-error-messages>
