--- a/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
+++ b/src/app/modules/proveedores/registrar-proveedor/registrar-proveedor.component.html
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-4">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>CUIT/CUIL</mat-label>
+            <mat-label>CUIT</mat-label>
             <input type="text" mask="00-00000000-0" matInput [formControl]="txCuit"/>
           </mat-form-field>
           <app-error-messages [control]="txCuit"></app-error-messages>
