--- a/src/app/modules/inventario/consultar-inventario/consultar-inventario.component.html
+++ b/src/app/modules/inventario/consultar-inventario/consultar-inventario.component.html
@@ -37,7 +37,6 @@
       </div>
     </form>
 
-
     <!-- Btn de buscar y limpiar -->
     <div class="row text-right">
       <div class="col d-flex justify-content-end">
@@ -53,17 +52,16 @@
 
   <br>
 
-
   <mat-card-header class="header-card">
     <h2 style="color: grey">Productos en inventario encontrados</h2>
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="detallesProducto.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="detallesProducto.length > 0">
+  <mat-card [hidden]="detallesProducto.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
@@ -76,7 +74,7 @@
             </ng-container>
 
             <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
               <mat-cell *matCellDef="let detalleProducto" data-label="Producto">{{ detalleProducto.producto.nombre }}</mat-cell>
             </ng-container>
 
@@ -90,8 +88,8 @@
               <mat-cell *matCellDef="let detalleProducto" data-label="Marca">{{ detalleProducto.producto?.marca?.nombre }}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="cantidadEnInventario">
-              <mat-header-cell *matHeaderCellDef>CANT. EN INVENTARIO</mat-header-cell>
+            <ng-container matColumnDef="cantEnInventario">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>CANT. EN INVENTARIO</mat-header-cell>
               <mat-cell *matCellDef="let detalleProducto" data-label="CantidadEnInventario">{{ detalleProducto.cantEnInventario }}</mat-cell>
             </ng-container>
 
@@ -115,11 +113,7 @@
 
           </mat-table>
 
-          <h6 *ngIf="!this.detallesProducto.length" class="alert alert-secondary text-center">
-            No se encuentran comprobantes para mostrar, realice una nueva búsqueda.
-          </h6>
-
-          <mat-paginator *ngIf="this.detallesProducto.length > 0"
+          <mat-paginator
                          [length]="this.detallesProducto.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
@@ -127,6 +121,10 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.detallesProducto.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran comprobantes para mostrar, realice una nueva búsqueda.
+  </h5>
 </div>
 
 
