--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -93,22 +93,22 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="pedidos.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card class="mat-card" *ngIf="pedidos.length > 0">
+  <mat-card class="mat-card" [hidden]="pedidos.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="fechaEmision">
-              <mat-header-cell *matHeaderCellDef>FECHA DE EMISIÓN</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA DE EMISIÓN</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Fecha de emision">{{ pedido.fechaEmision | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="numeroPedido">
-              <mat-header-cell *matHeaderCellDef>NÚMERO DE ORDEN</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>NÚMERO DE ORDEN</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Pedido">{{ pedido.id }}</mat-cell>
             </ng-container>
 
@@ -118,12 +118,12 @@
             </ng-container>
 
             <ng-container matColumnDef="total">
-              <mat-header-cell *matHeaderCellDef>TOTAL</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>TOTAL</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Subtotal" >$ {{ pedido.total | number:'1.2-2':'es-AR'}}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estado">
-              <mat-header-cell *matHeaderCellDef>ESTADO</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>ESTADO</mat-header-cell>
               <mat-cell *matCellDef="let pedido" data-label="Estado">
                 <mat-icon
                   *ngIf="pedido.estadoPedido.id === 1 || pedido.estadoPedido.id === 3"
@@ -159,11 +159,7 @@
 
           </mat-table>
 
-          <h6 *ngIf="!this.pedidos.length" class="alert alert-secondary text-center">
-            No se encuentran pedidos para mostrar, realice una nueva búsqueda.
-          </h6>
-
-          <mat-paginator *ngIf="this.pedidos.length > 0"
+          <mat-paginator
                          [length]="this.pedidos.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
@@ -171,6 +167,10 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.pedidos.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran pedidos para mostrar, realice una nueva búsqueda.
+  </h5>
 </div>
 
 
