--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -153,6 +153,7 @@
     </div>
 
     <br>
+    <mat-divider class="my-3"></mat-divider>
 
     <div class="row text-right mt-3 mb-3">
       <!-- Btn de cancelar, registrar y modificar -->
