--- a/src/app/modules/clientes/consultar-cuentas-corrientes/consultar-cuentas-corrientes.component.html
+++ b/src/app/modules/clientes/consultar-cuentas-corrientes/consultar-cuentas-corrientes.component.html
@@ -45,33 +45,33 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="cuentas.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card class="mat-card" *ngIf="cuentas.length > 0">
+  <mat-card class="mat-card" [hidden]="cuentas.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
-            <ng-container matColumnDef="idCuenta">
-              <mat-header-cell *matHeaderCellDef>NÚMERO DE CUENTA</mat-header-cell>
+            <ng-container matColumnDef="id">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>NÚMERO DE CUENTA</mat-header-cell>
               <mat-cell *matCellDef="let cuentaCorriente">{{ cuentaCorriente.id }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="nombre">
-              <mat-header-cell *matHeaderCellDef>NOMBRE</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE</mat-header-cell>
               <mat-cell *matCellDef="let cuentaCorriente">{{ cuentaCorriente.usuario?.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="apellido">
-              <mat-header-cell *matHeaderCellDef>APELLIDO</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>APELLIDO</mat-header-cell>
               <mat-cell *matCellDef="let cuentaCorriente">{{ cuentaCorriente.usuario?.apellido }}</mat-cell>
             </ng-container>
-            <ng-container matColumnDef="creada">
-              <mat-header-cell *matHeaderCellDef>FECHA DE CREACIÓN</mat-header-cell>
+            <ng-container matColumnDef="fechaDesde">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA DE CREACIÓN</mat-header-cell>
               <mat-cell *matCellDef="let cuentaCorriente">{{ cuentaCorriente.fechaDesde | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
-            <ng-container matColumnDef="balance">
-              <mat-header-cell *matHeaderCellDef>SALDO</mat-header-cell>
+            <ng-container matColumnDef="balanceTotal">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>SALDO</mat-header-cell>
               <mat-cell *matCellDef="let cuentaCorriente">
                 $ {{ cuentaCorriente.balanceTotal | number:'1.2-2':'es-AR' }}
               </mat-cell>
@@ -93,10 +93,7 @@
             <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
             <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
           </mat-table>
-          <h6 *ngIf="!this.cuentas.length" class="alert alert-secondary text-center">
-            No se encuentran cuentas corrientes para mostrar, por favor realice una nueva búsqueda.
-          </h6>
-          <mat-paginator *ngIf="this.cuentas.length > 0"
+          <mat-paginator
                          [length]="this.cuentas.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
@@ -105,4 +102,8 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && this.cuentas.length === 0" class="alert alert-secondary text-center">
+    No se encuentran cuentas corrientes para mostrar, por favor realice una nueva búsqueda.
+  </h5>
 </div>
