--- a/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/registrar-cuenta-corriente/registrar-cuenta-corriente.component.html
@@ -49,7 +49,7 @@
     <br *ngIf="ventas.length == 0 && !esRegistro">
 
     <!-- loading -->
-    <div class="spinner-wrapper" *ngIf="ventas.length == 0 && !esRegistro">
+    <div class="spinner-wrapper" *ngIf="isLoading">
       <mat-spinner></mat-spinner>
     </div>
 
@@ -66,24 +66,24 @@
 
     <br>
 
-    <mat-card *ngIf="ventas.length > 0 && !esRegistro">
+    <mat-card [hidden]="!(ventas.length > 0 && !esRegistro)">
       <mat-card-content>
         <div class="row">
           <div class="col-md-12">
             <mat-table [dataSource]="tableDataSource" matSort [class.disabled-table]="formDesactivado || listaVentasDeshabilitada">
 
-              <ng-container matColumnDef="nroventa">
-                <mat-header-cell *matHeaderCellDef>NÚMERO DE VENTA</mat-header-cell>
+              <ng-container matColumnDef="id">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>NÚMERO DE VENTA</mat-header-cell>
                 <mat-cell *matCellDef="let venta">{{ venta.id }}</mat-cell>
               </ng-container>
 
               <ng-container matColumnDef="montoTotal">
-                <mat-header-cell *matHeaderCellDef>MONTO</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>MONTO</mat-header-cell>
                 <mat-cell *matCellDef="let venta">$ {{ venta.montoTotal | number:'1.2-2':'es-AR' }}</mat-cell>
               </ng-container>
 
               <ng-container matColumnDef="fecha">
-                <mat-header-cell *matHeaderCellDef >FECHA</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</mat-header-cell>
                 <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy' }}</mat-cell>
               </ng-container>
 
@@ -122,7 +122,7 @@
               <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
               <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
             </mat-table>
-            <mat-paginator *ngIf="this.ventas.length > 0"
+            <mat-paginator
                            [length]="this.ventas.length"
                            [pageSize]="10"
                            [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
@@ -130,6 +130,10 @@
         </div>
       </mat-card-content>
     </mat-card>
+
+    <h5 *ngIf="!isLoading && this.ventas.length === 0" class="alert alert-secondary text-center">
+      No se encuentran ventas para esta cuenta para mostrar, por favor realice una nueva búsqueda.
+    </h5>
   </form>
 
   <mat-divider class="my-3"></mat-divider>
