--- a/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
+++ b/src/app/modules/comprobante/consultar-comprobante/consultar-comprobante.component.html
@@ -105,22 +105,22 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="comprobantes.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card class="mat-card" *ngIf="comprobantes.length > 0">
+  <mat-card class="mat-card" [hidden]="comprobantes.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="fechaEmision">
-              <mat-header-cell *matHeaderCellDef>FECHA DE EMISIÓN</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA DE EMISIÓN</mat-header-cell>
               <mat-cell *matCellDef="let comprobante" data-label="Fecha de emision">{{ comprobante.fechaEmision | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="numeroComprobante">
-              <mat-header-cell *matHeaderCellDef>N° COMPROBANTE</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>N° COMPROBANTE</mat-header-cell>
               <mat-cell *matCellDef="let comprobante" data-label="Comprobante">{{ comprobante.numeroComprobante }}</mat-cell>
             </ng-container>
 
@@ -142,7 +142,7 @@
             </ng-container>
 
             <ng-container matColumnDef="total">
-              <mat-header-cell *matHeaderCellDef>TOTAL</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>TOTAL</mat-header-cell>
               <mat-cell *matCellDef="let comprobante" data-label="Subtotal" >$ {{ comprobante.total | number:'1.2-2':'es-AR'}}</mat-cell>
             </ng-container>
 
@@ -166,11 +166,7 @@
 
           </mat-table>
 
-          <h6 *ngIf="!this.comprobantes.length" class="alert alert-secondary text-center">
-            No se encuentran comprobantes para mostrar, realice una nueva búsqueda.
-          </h6>
-
-          <mat-paginator *ngIf="this.comprobantes.length > 0"
+          <mat-paginator
                          [length]="this.comprobantes.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
@@ -178,6 +174,10 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.comprobantes.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran comprobantes para mostrar, realice una nueva búsqueda.
+  </h5>
 </div>
 
 
