--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.html
@@ -166,7 +166,7 @@
 
     <br>
 
-    <mat-card *ngIf="productos.length > 0 && !(data.esRegistro && !ordenSeleccionada)">
+    <mat-card [hidden]="!(productos.length > 0 && !(data.esRegistro && !ordenSeleccionada))">
       <mat-card-content>
         <div class="row">
 
@@ -178,12 +178,12 @@
                   <img [src]="producto.imgProducto" class="img-thumbnail"/>
                 </mat-cell>
               </ng-container>
-              <ng-container matColumnDef="producto">
-                <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
+              <ng-container matColumnDef="nombre">
+                <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
                 <mat-cell *matCellDef="let producto">{{ producto.nombre }}</mat-cell>
               </ng-container>
               <ng-container matColumnDef="costo">
-                <mat-header-cell *matHeaderCellDef>COSTO COMPRA</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef mat-sort-header>COSTO COMPRA</mat-header-cell>
                 <mat-cell *matCellDef="let producto">
                   $ {{ producto.costo | number:'1.2-2':'es-AR' }}
                 </mat-cell>
@@ -213,10 +213,7 @@
               <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
               <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
             </mat-table>
-            <h6 *ngIf="!this.productos.length" class="alert alert-secondary text-center">
-              No se encuentran productos para mostrar, por favor realice una nueva búsqueda.
-            </h6>
-            <mat-paginator *ngIf="this.productos.length > 0"
+            <mat-paginator
                            [length]="this.productos.length"
                            [disabled]="formDesactivado"
                            [pageSize]="10"
@@ -226,6 +223,10 @@
       </mat-card-content>
     </mat-card>
   </form>
+
+  <h5 *ngIf="!isLoading && !(this.productos.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran productos para mostrar, por favor realice una nueva búsqueda.
+  </h5>
 
   <br>
   <mat-divider></mat-divider>
