--- a/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
+++ b/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
@@ -109,18 +109,18 @@
   </div>
 
   <!-- Implementación de Mat-Tab-Group -->
-  <mat-tab-group mat-align-tabs="#e15b35" color="warn" *ngIf="!isSearchingLicencias && !isSearchingAsistencias">
+  <mat-tab-group mat-align-tabs="#e15b35" color="warn" [hidden]="isSearchingLicencias && isSearchingAsistencias">
     <!-- Pestaña de asistencias -->
     <mat-tab label="Asistencias">
-      <mat-card *ngIf="!isSearchingAsistencias">
+      <mat-card [hidden]="isSearchingAsistencias">
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <mat-table [dataSource]="asistencias" matSort>
+              <mat-table [dataSource]="tableDataSourceAsistencia" matSort>
 
                 <!-- Nombre del empleado -->
-                <ng-container matColumnDef="nombre">
-                  <mat-header-cell *matHeaderCellDef>EMPLEADO</mat-header-cell>
+                <ng-container matColumnDef="nombreApellido">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>EMPLEADO</mat-header-cell>
                   <mat-cell *matCellDef="let asistencia" class="nombre-cell">
                     <mat-icon class="person-icon">person</mat-icon>{{ nombreApellido }}
                   </mat-cell>
@@ -128,7 +128,7 @@
 
                 <!-- Fecha -->
                 <ng-container matColumnDef="fecha">
-                  <mat-header-cell *matHeaderCellDef>FECHA</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</mat-header-cell>
                   <mat-cell *matCellDef="let asistencia" class="fecha-cell">
                     {{ asistencia.fecha | date: 'dd/MM/yyyy' }}
                   </mat-cell>
@@ -136,7 +136,7 @@
 
                 <!-- Hora de entrada -->
                 <ng-container matColumnDef="horaEntrada">
-                  <mat-header-cell *matHeaderCellDef>HORA DE ENTRADA</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>HORA DE ENTRADA</mat-header-cell>
                   <mat-cell *matCellDef="let asistencia" class="hora-entrada-cell">
                     {{ asistencia.horaEntrada }}
                   </mat-cell>
@@ -144,7 +144,7 @@
 
                 <!-- Hora de salida -->
                 <ng-container matColumnDef="horaSalida">
-                  <mat-header-cell *matHeaderCellDef>HORA DE SALIDA</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>HORA DE SALIDA</mat-header-cell>
                   <mat-cell *matCellDef="let asistencia" class="hora-salida-cell">
                     {{ asistencia.horaSalida }}
                   </mat-cell>
@@ -152,7 +152,7 @@
 
                 <!-- Comentario -->
                 <ng-container matColumnDef="comentario">
-                  <mat-header-cell *matHeaderCellDef>COMENTARIO</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>COMENTARIO</mat-header-cell>
                   <mat-cell *matCellDef="let asistencia" class="comentario-cell">
                     {{ asistencia.comentario }}
                   </mat-cell>
@@ -177,11 +177,11 @@
               </mat-table>
 
               <!-- Mensaje cuando no hay asistencias -->
-              <h6 *ngIf="asistencias.length === 0" class="alert alert-secondary text-center">
+              <h5 *ngIf="asistencias.length === 0" class="alert alert-secondary text-center">
                 No se encuentran asistencias para mostrar, realice una nueva búsqueda.
-              </h6>
+              </h5>
 
-              <mat-paginator *ngIf="asistencias.length > 0"
+              <mat-paginator
                              [length]="asistencias.length"
                              [pageSize]="10"
                              [pageSizeOptions]="[5, 10, 20]"
@@ -195,15 +195,15 @@
 
     <!-- Pestaña de licencias -->
     <mat-tab label="Licencias">
-      <mat-card *ngIf="!isSearchingLicencias">
+      <mat-card [hidden]="isSearchingLicencias">
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
-              <mat-table [dataSource]="licencias" matSort>
+              <mat-table [dataSource]="tableDataSourceLicencia" matSort>
 
                 <!-- Nombre del empleado -->
-                <ng-container matColumnDef="nombre">
-                  <mat-header-cell *matHeaderCellDef>EMPLEADO</mat-header-cell>
+                <ng-container matColumnDef="nombreApellido">
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>EMPLEADO</mat-header-cell>
                   <mat-cell *matCellDef="let licencia">
                     <mat-icon class="person-icon">person</mat-icon>{{ nombreApellido }}
                   </mat-cell>
@@ -211,7 +211,7 @@
 
                 <!-- Periodo -->
                 <ng-container matColumnDef="periodo">
-                  <mat-header-cell *matHeaderCellDef>PERIODO</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>PERIODO</mat-header-cell>
                   <mat-cell *matCellDef="let licencia">
                     {{ licencia.fechaInicio | date: 'dd/MM/yyyy' }} al {{ licencia.fechaFin | date: 'dd/MM/yyyy' }}
                   </mat-cell>
@@ -219,7 +219,7 @@
 
                 <!-- Motivo -->
                 <ng-container matColumnDef="motivo">
-                  <mat-header-cell *matHeaderCellDef>MOTIVO</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>MOTIVO</mat-header-cell>
                   <mat-cell *matCellDef="let licencia">
                     {{ licencia.motivo.nombre }}
                   </mat-cell>
@@ -227,7 +227,7 @@
 
                 <!-- Estado -->
                 <ng-container matColumnDef="estado">
-                  <mat-header-cell *matHeaderCellDef>ESTADO</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>ESTADO</mat-header-cell>
                   <mat-cell *matCellDef="let licencia">
                     <mat-icon *ngIf="licencia.estadoLicencia.id === 1" class="warning-icon" matTooltip="El empleador aún no ha revisado su solicitud.">
                       warning
@@ -244,7 +244,7 @@
 
                 <!-- Comentario -->
                 <ng-container matColumnDef="comentario">
-                  <mat-header-cell *matHeaderCellDef>COMENTARIO</mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef mat-sort-header>COMENTARIO</mat-header-cell>
                   <mat-cell *matCellDef="let licencia">
                     {{ licencia.comentario }}
                   </mat-cell>
@@ -272,11 +272,11 @@
               </mat-table>
 
               <!-- Mensaje cuando no hay licencias -->
-              <h6 *ngIf="licencias.length === 0" class="alert alert-secondary text-center">
+              <h5 *ngIf="licencias.length === 0" class="alert alert-secondary text-center">
                 No se encuentran licencias para mostrar, realice una nueva búsqueda.
-              </h6>
+              </h5>
 
-              <mat-paginator *ngIf="licencias.length > 0"
+              <mat-paginator
                              [length]="licencias.length"
                              [pageSize]="10"
                              [pageSizeOptions]="[5, 10, 20]"
