--- a/src/app/modules/gerencia/consultar-caja/consultar-caja.component.html
+++ b/src/app/modules/gerencia/consultar-caja/consultar-caja.component.html
@@ -35,21 +35,21 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="cajas.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="cajas.length > 0">
+  <mat-card [hidden]="cajas.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort>
             <ng-container matColumnDef="nombre">
-              <mat-header-cell *matHeaderCellDef>NOMBRE</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>NOMBRE</mat-header-cell>
               <mat-cell *matCellDef="let caja">{{ caja.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="descripcion">
-              <mat-header-cell *matHeaderCellDef>DESCRIPCIÓN</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>DESCRIPCIÓN</mat-header-cell>
               <mat-cell *matCellDef="let caja">{{ caja.descripcion }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="acciones">
@@ -69,10 +69,7 @@
             <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
             <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
           </mat-table>
-          <h6 *ngIf="!this.cajas.length" class="alert alert-secondary text-center">
-            No se encuentran cajas para mostrar, por favor realice una nueva búsqueda.
-          </h6>
-          <mat-paginator *ngIf="this.cajas.length > 0"
+          <mat-paginator
                          [length]="this.cajas.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
@@ -81,4 +78,8 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.cajas.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran cajas para mostrar, por favor realice una nueva búsqueda.
+  </h5>
 </div>
