--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -69,11 +69,11 @@
   </mat-card-header>
 
   <!-- loading -->
-  <div class="spinner-wrapper" *ngIf="productos.length == 0">
+  <div class="spinner-wrapper" *ngIf="isLoading">
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card class="mat-card" *ngIf="productos.length > 0">
+  <mat-card class="mat-card" [hidden]="productos.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
@@ -84,17 +84,17 @@
                 <img [src]="producto.imgProducto" class="img-thumbnail"/>
               </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
+            <ng-container matColumnDef="nombre">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.nombre }}</mat-cell>
             </ng-container>
             <ng-container matColumnDef="costoCompra">
-              <mat-header-cell *matHeaderCellDef >COSTO COMPRA</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>COSTO COMPRA</mat-header-cell>
               <mat-cell *matCellDef="let producto">
                 $ {{ producto.costo | number:'1.2-2':'es-AR' }}
               </mat-cell>
             </ng-container>
-            <ng-container matColumnDef="precioBase">
+            <ng-container matColumnDef="precioConIVA">
               <mat-header-cell *matHeaderCellDef>PRECIO DE VENTA</mat-header-cell>
               <mat-cell *matCellDef="let producto">
                 $ {{ producto.precioConIVA | number:'1.2-2':'es-AR' }}
@@ -129,10 +129,7 @@
             <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
             <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
           </mat-table>
-          <h6 *ngIf="!this.productos.length" class="alert alert-secondary text-center">
-            No se encuentran productos para mostrar, por favor realice una nueva búsqueda.
-          </h6>
-          <mat-paginator *ngIf="this.productos.length > 0"
+          <mat-paginator
                          [length]="this.productos.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
@@ -140,4 +137,8 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.productos.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran productos para mostrar, por favor realice una nueva búsqueda.
+  </h5>
 </div>
