--- a/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
+++ b/src/app/modules/promociones/registrar-promocion/registrar-promocion.component.html
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <mat-card *ngIf="!isLoading && listaProductos.length > 0">
+  <mat-card [hidden]="isLoading || listaProductos.length === 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
@@ -77,13 +77,13 @@
               </mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="producto">
-              <mat-header-cell *matHeaderCellDef>PRODUCTO</mat-header-cell>
+            <ng-container matColumnDef="nombre">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>PRODUCTO</mat-header-cell>
               <mat-cell *matCellDef="let producto" data-label="Producto">{{ producto.nombre }}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="precio">
-              <mat-header-cell *matHeaderCellDef>PRECIO DE VENTA</mat-header-cell>
+            <ng-container matColumnDef="precioConIVA">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>PRECIO DE VENTA</mat-header-cell>
               <mat-cell *matCellDef="let producto" data-label="Precio">
                 <div class="precio-container">
                   <span [ngClass]="{'precio-tachado': producto.estaEnPromocion}">
@@ -101,7 +101,7 @@
 
           </mat-table>
 
-          <mat-paginator *ngIf="this.listaProductos.length > 0"
+          <mat-paginator
                          [length]="this.listaProductos.length"
                          [pageSize]="10"
                          [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
@@ -109,6 +109,10 @@
       </div>
     </mat-card-content>
   </mat-card>
+
+  <h5 *ngIf="!isLoading && !(this.listaProductos.length > 0)" class="alert alert-secondary text-center">
+    No se encuentran productos para mostrar, por favor realice una nueva búsqueda.
+  </h5>
 
   <br>
   <mat-divider class="my-3"></mat-divider>
