--- a/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
+++ b/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
@@ -38,13 +38,13 @@
     <br>
 
     <!-- loading -->
-    <div class="spinner-wrapper" *ngIf="listaCuotas.length == 0">
+    <div class="spinner-wrapper" *ngIf="isLoading">
       <mat-spinner></mat-spinner>
     </div>
 
     <br>
 
-      <mat-card class="mat-card" *ngIf="listaCuotas.length > 0">
+      <mat-card class="mat-card" [hidden]="listaCuotas.length === 0">
         <mat-card-content>
           <div class="row">
             <div class="col-md-12">
@@ -110,12 +110,9 @@
               <mat-header-row *matHeaderRowDef="columnas"></mat-header-row>
               <mat-row *matRowDef="let row; columns: columnas;"></mat-row>
               </mat-table>
-              <h6 *ngIf="!listaCuotas.length" class="alert alert-secondary text-center">
-                No se encuentran cuotas disponibles, por favor realice una nueva búsqueda.
-              </h6>
 
               <!-- Paginador -->
-              <mat-paginator *ngIf="listaCuotas.length > 0"
+              <mat-paginator
                              [length]="listaCuotas.length"
                              [disabled]="formDesactivado"
                              [pageSize]="10"
@@ -125,6 +122,9 @@
         </mat-card-content>
       </mat-card>
 
+      <h5 *ngIf="!isLoading && !(this.listaCuotas.length > 0)" class="alert alert-secondary text-center">
+        No se encuentran cuotas disponibles, por favor realice una nueva búsqueda.
+      </h5>
     </div>
   </form>
 
