--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -85,29 +85,29 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="ventas.length > 0 && !isLoading">
+  <mat-card [hidden]="ventas.length === 0 && isLoading">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort>
 
-            <ng-container matColumnDef="nroventa">
-              <mat-header-cell *matHeaderCellDef>NÚMERO DE VENTA</mat-header-cell>
+            <ng-container matColumnDef="id">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>NÚMERO DE VENTA</mat-header-cell>
               <mat-cell *matCellDef="let venta">{{ venta.id }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="montoTotal">
-              <mat-header-cell *matHeaderCellDef>MONTO</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>MONTO</mat-header-cell>
               <mat-cell *matCellDef="let venta">$ {{ venta.montoTotal | number:'1.2-2':'es-AR' }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="fecha">
-              <mat-header-cell *matHeaderCellDef >FECHA</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>FECHA</mat-header-cell>
               <mat-cell *matCellDef="let venta">{{ venta.fecha | date: 'dd/MM/yyyy' }}</mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="formaDePago">
-              <mat-header-cell *matHeaderCellDef>FORMA DE PAGO</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef mat-sort-header>FORMA DE PAGO</mat-header-cell>
               <mat-cell *matCellDef="let venta">
                  {{ venta.formaDePago?.nombre }}
               </mat-cell>
@@ -152,10 +152,12 @@
                      [ngClass]="{'anulada-row': row.anulada}"
                      [matTooltip]="row.anulada ? 'Venta anulada' : ''"></mat-row>
           </mat-table>
-          <mat-paginator *ngIf="this.ventas.length > 0"
-                         [length]="this.ventas.length"
-                         [pageSize]="10"
-                         [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+          <mat-paginator
+            [length]="this.ventas.length"
+            [pageSize]="10"
+            [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+          </mat-paginator>
         </div>
       </div>
     </mat-card-content>
